--- a/data/cgi/php/css/main.css
+++ b/data/cgi/php/css/main.css
@@ -15,6 +15,10 @@ h1{
 	margin-right: auto;
 	width: 6em;
 	text-indent: 0;
+	font-size: 25px;
+	background-color: skyblue;
+	border-radius: 30% 70% 70% 30% / 30% 58% 42% 70%;
+	padding: 100px;
 }
 .Content{
 	font-size: 1.5em;
@@ -25,6 +29,10 @@ h1{
 	margin-right: auto;
 	width: 6em;
 	text-indent: 0;
+	font-size: 25px;
+	background-color: skyblue;
+	border-radius: 30% 70% 70% 30% / 30% 58% 42% 70%;
+	padding: 100px;
 	/*border-top: 3px #EB5353 dotted;
     border-right: 3px #F9D923 double;
     border-bottom: 3px #36AE7C dashed;
